HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumEmpty/Source/Main.uv
//! Rejected enum specimen for an enum declaration with no variants.

public enum EmptyEnumPayload {}
